# BRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  StructLayoutSettings.json
BRenderer/: BRenderer.cpp  BRenderer.h  CMakeLists.txt  pch.h
BRenderer/Core/: App.cpp  App.h  Engine.cpp  Engine.h  LogSystem.cpp  LogSystem.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Ref.h  RefCounted.h  UUID.cpp  UUID.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  thirdpartiesInc.h
BRenderer/Core/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h
BRenderer/Core/Events/: Event.h  Event.inl
BRenderer/Core/Inputs/: InputSystem.cpp  InputSystem.h
BRenderer/Core/Memory/: AllocatorStlAdaptor.h  ArenaMemory.cpp  ArenaMemory.h  LinearMemory.cpp  LinearMemory.h  StackMemory.cpp  StackMemory.h
BRenderer/Core/Resources/: ResourceManager.h
BRenderer/Core/Storage/: ArenaAllocator.cpp  ArenaAllocator.h  BlockAllocator.cpp  BlockAllocator.h  ContiguousPool.h  ResourceAllocator.h
BRenderer/Core/Threading/: Barrier.h  MainThread.cpp  MainThread.h  ThreadPool.cpp  ThreadPool.h  Threading.h  Work.h
BRenderer/Files/: FilesUtils.cpp  FilesUtils.h
BRenderer/Geometry/: Geometry.cpp  Geometry.h  Mesh2D.cpp  Mesh2D.h
BRenderer/Importer/: Importer.cpp  Importer.h
BRenderer/Renderer/: Descriptors.cpp  Descriptors.h  DeviceBuffer.cpp  DeviceBuffer.h  DeviceImage.cpp  DeviceImage.h  DevicePipeline.cpp  DevicePipeline.h  DeviceSwapchain.cpp  DeviceSwapchain.h  RenderDedvice.h  RenderDefs.h  RenderDevice.cpp  RenderDevice.h  RenderEnums.h  RenderResourcesHandles.h  RenderSurface.cpp  RenderSurface.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  RenderingResourceIDs.h  ResourcesHandles.h  SceneObjectsIDs.h  SceneRenderer.cpp  SceneRenderer.h  SceneResourcesHandles.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  VkInitializerHelper.cpp  VkInitializerHelper.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h  WindowRenderer.cpp  WindowRenderer.h
BRenderer/Renderer/Allocators/: ResourceAllocator.h  StagingAllocator.cpp  StagingAllocator.h  SystemsOwner.cpp  SystemsOwner.h
BRenderer/Renderer/GUI/: ImDrawDataSnapshot.cpp  ImDrawDataSnapshot.h
BRenderer/Renderer/Geometry/: Geometry.cpp  Geometry.h  Mesh2D.cpp  Mesh2D.h
BRenderer/Renderer/GpuResources/: Descriptors.cpp  Descriptors.h  DeviceBuffer.cpp  DeviceImage.cpp  DeviceImage.h  DevicePipeline.cpp  DevicePipeline.h  DeviceSwapchain.cpp  DeviceSwapchain.h  GpuResourcesHandles.h
BRenderer/Renderer/Internal/: IdOwner.h  RenderCommandQueue.h  RenderUpdateCmdGroup.h  WindowCmdList.h  WindowRenderer.cpp  WindowRenderer.h
BRenderer/Renderer/Internal/CmdList/: CmdList.h  RenderUpdateCmdGroup.h  ResourceCmdList.h  SceneRendererCmdList.h  WindowCmdList.h
BRenderer/Renderer/Internal/CmdList/Executors/: ResourceCmdListExecutor.cpp  ResourceCmdListExecutor.h  SceneRendererCmdListExecutor.cpp  SceneRendererCmdListExecutor.h  WindowCmdListExecutor.cpp  WindowCmdListExecutor.h
BRenderer/Renderer/Shaders/: compile_shaders.bat  shader.frag  shader.vert  vert.spv
BRenderer/Renderer/Storages/: BaseStorage.h  MaterialStorage.cpp  MaterialStorage.h  MeshStorage.cpp  MeshStorage.h  RenderStorageGlobals.cpp  RenderStorageGlobals.h  TextureStorage.cpp  TextureStorage.h
BRenderer/Renderer/Vulkan/: VKDescriptors.h  VkDescriptors.cpp  VkInitializerHelper.cpp  VkInitializerHelper.h  VulkanInc.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h
BRenderer/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneComponentsView.h
BRenderer/Scene/Components/: EntityComponent.cpp  EntityComponent.h  LightComponents.cpp  LightComponents.h  MaterialComponent.cpp  MaterialComponent.h  Mesh3DComponent.cpp  Mesh3DComponent.h  Mesh3DRendererComponent.h  NodeComponent.cpp  NodeComponent.h  PerspectiveCameraComponent.cpp  PerspectiveCameraComponent.h  Transform3DComponent.cpp  Transform3DComponent.h
BRenderer/Scene/Systems/: UpdateRendererSystem.cpp  UpdateRendererSystem.h
BRenderer/Tests/: CMakeLists.txt
BRenderer/Visualization/: Image.cpp  Image.h  SceneRenderProxy.h  SceneRenderer.cpp  SceneRenderer.h  SceneRendererProxy.cpp  SceneRendererProxy.h  SceneView.cpp  SceneView.h  Window.cpp  Window.h  WindowImGuiLayer.cpp  WindowImGuiLayer.h  WindowManager.cpp  WindowManager.h  WindowRenderer.cpp  WindowRenderer.h
BRenderer/Visualization/Resources/: Image.cpp  Image.h  Material.cpp  Material.h  Mesh3D.cpp  Mesh3D.h
EditorApp/: CMakeLists.txt  EditorApp.cpp
EditorApp/EditorGUI/: EditorGuiLayer.cpp  EditorGuiLayer.h
EditorApp/EditorGUI/GUIWindows/: MaterialEditor.cpp  MaterialEditor.h
EditorApp/Resources/Monkey/: Monkey.mtl
